--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.example.codekreigers"
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'nl.psdcompany:duo-navigation-drawer:3.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
